--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 </html>
 
 <footer>
-  <h3 style="text-align: center; text-shadow: 0 0 10px #ffe600, 0 0 20px #ffe600;">Rate my ebsite</h3>
+  <h3 style="text-align: center; text-shadow: 0 0 10px #ffe600, 0 0 20px #ffe600;">Rate my website</h3>
   <form action="#" method="post" style="max-width: 600px; margin: 0 auto; text-align: left;">
     <label for="rating" style="font-size: 1.2rem; text-shadow: 0 0 10px #ffe600, 0 0 20px #ffe600;">
       How would you rate my website? (0 to 10)
